<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2020  David Osemwota
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

<!--    Preference keys-->
    <string name="preference_has_api_key" >
        <xliff:g id="preference" >preference_has_key</xliff:g>
    </string>
    <string name="preference_api_key" >
        <xliff:g id="preference" >preference_api_key</xliff:g>
    </string>
    <string name="preference_theme_key" >
        <xliff:g id="preference" >preference_theme_key</xliff:g>
    </string>
    <string name="preference_first_time">preference_first_time</string>

    <string name="app_name" translatable="false">xchange</string>
    <string name="str_calculator">Calculator</string>
    <string name="str_currency">Currency</string>
    <string name="str_period">.</string>
    <string name="str_flag_con">flag icon</string>
    <string name="str_btn_convert">Convert</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="_0_0" translatable="false">0.0</string>
    <string name="exchange_title">Exchange</string>
    <string name="home_title">Home</string>

    <!-- Sync Preferences -->
    <string name="pref_theme_title">Theme</string>
    <string name="api_title_pref">Your API key</string>
    <string name="api_category_title_pref">API</string>
    <string name="select_theme_pref">Select Theme</string>

    <string name="search_currency_hint">Search here</string>
    <string name="pref_version_key">version</string>
    <string name="internet_required">Internet required</string>
    <string name="FROM_CODE">from_code_key</string>
    <string name="TO_CODE_KEY">to_code_key</string>
    <string name="no_internet_error">Error connecting to service</string>
    <string name="paste_key">Paste your key here</string>
    <string name="save">Save</string>
    <string name="get_api_key_url">http://free.currencyconverterapi.com/free-api-key</string>
    <string name="get_api_message">This Application requires an API key from free.currencyconverterapi.com. \nYou can register for one below and yes it is free</string>
    <string name="get_your_api">get your API</string>
    <string name="list_of_a_currencies">List of a currencies</string>

</resources>
