<!--
  ~ Copyright 2020 Audio Shinigami Studio.
  ~  All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/pref_theme_title">

        <ListPreference
            app:defaultValue="System default"
            app:entries="@array/theme_entries"
                app:entryValues="@array/theme_values"
            app:key="@string/theme_key"
            app:title="@string/select_theme_pref"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/api_category_title_pref">

        <EditTextPreference
            app:key="@string/api_key_pref"
            app:title="@string/api_title_pref"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
            app:title="App Details">

        <Preference
                app:useSimpleSummaryProvider="true"
                android:summary="Source code on Github"
                app:key="open_github"
                app:title="Currency Converter">

            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/david-oh-git/CurrencyConverter" />

        </Preference>

        <Preference
            app:key="@string/pref_version_key"
            app:title="Version"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>


</PreferenceScreen>
