<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>

        <variable
                name="vm"
                type="io.audioshinigami.currencyconverter.sharedviewmodels.SharedCurrencyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/convert_currency_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".convertAmount.CurrencyConvertFragment" >

        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView"
                style="@style/TitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/title_top_margin"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/montserrat_alternates"
                android:text="@string/str_currency"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView2"
                style="@style/TitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/str_calculator"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
                android:id="@+id/textView4"
                style="@style/TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/str_period"
                android:textAlignment="textStart"
                android:textColor="@color/project_green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
                android:id="@+id/id_layout_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:background="@color/background_color"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittxt_currency_from"
                    android:imeOptions="actionDone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:layout_marginStart="@dimen/editxt_padding"
                    android:fontFamily="@font/montserrat_alternates"
                    android:text="@={vm.inputAmount}"
                    android:background="@color/background_color"
                    android:hint="@string/_0_0"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/editxt_padding"
                    android:textSize="@dimen/dimen_edittxt_size"/>

            <TextView
                    style="@style/currencyInputStyle"
                    android:text="@{vm.fromCode}"
                    android:id="@+id/txtvw_currency_from"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/id_layout_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/background_color"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/id_layout_from">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittxt_currency_to"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/editxt_padding"
                    android:padding="@dimen/editxt_padding"
                    android:layout_weight="4"
                    android:background="@null"
                    android:enabled="false"
                    android:fontFamily="@font/montserrat_alternates"
                    android:text="@{vm.convertedAmount}"
                    android:hint="@string/_0_0"
                    android:inputType="text"
                    android:textSize="@dimen/dimen_edittxt_size" />

            <TextView
                    style="@style/currencyInputStyle"
                    android:id="@+id/txtvw_currency_to"
                    android:text="@{vm.toCode}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
                android:id="@+id/id_btn_convert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_btnconvert_padd"
                android:paddingBottom="@dimen/dimen_btnconvert_padd"
                android:text="@string/str_btn_convert"
                android:textColor="@color/button_text"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:onClick="@{ () -> vm.start()}"
                app:elevation="4dp"
                app:backgroundTint="@color/button_background"
                app:layout_constraintTop_toBottomOf="@id/id_layout_to"
                app:layout_constraintEnd_toEndOf="@+id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintBottom_toTopOf="@id/bottom_guideline" />

        <androidx.constraintlayout.widget.Guideline
                app:layout_constraintGuide_end="24dp"
                android:id="@+id/bottom_guideline"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_guideline"
                app:layout_constraintGuide_begin="24dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guideline"
                app:layout_constraintGuide_end="24dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
