<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity">


    <TextView
            android:text="@string/str_currency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="64dp" app:layout_constraintHorizontal_bias="0.0"
            style="@style/TitleTextStyle"
            android:fontFamily="@font/montserrat_alternates"/>
    <TextView
            android:text="@string/str_calculator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            style="@style/TitleTextStyle"
    />

    <TextView
            android:text="@string/str_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            style="@style/TitleTextStyle"
            android:textColor="@color/project_green"
            app:layout_constraintHorizontal_bias="0.0"
            android:textAlignment="textStart"
            android:layout_margin="0dp"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"/>

    <LinearLayout
            android:id="@+id/id_layout_from"
            android:background="@color/md_grey_100"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            android:layout_marginTop="64dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittxt_currency_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@null"
                android:fontFamily="@font/montserrat_alternates"
                android:hint="25"
                android:inputType="number"
                android:textSize="@dimen/dimen_edittxt_size">

        </com.google.android.material.textfield.TextInputEditText>

        <TextView
                android:layout_weight="1"
                android:text="NGN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtvw_currency_from"
                android:textSize="@dimen/dimen_edittxt_size"
                android:textColor="@color/faded_text_colour"
                android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/id_layout_from"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/md_grey_100"
            android:id="@+id/id_layout_to"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittxt_currency_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@null"
                android:enabled="false"
                android:fontFamily="@font/montserrat_alternates"
                android:hint="250"
                android:inputType="number"
                android:textSize="@dimen/dimen_edittxt_size">

        </com.google.android.material.textfield.TextInputEditText>

        <TextView
                android:layout_weight="1"
                android:textColor="@color/faded_text_colour"
                android:text="USD"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtvw_currency_to"
                android:textSize="@dimen/dimen_edittxt_size" android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/id_layout_spinners"
            app:layout_constraintTop_toBottomOf="@+id/id_layout_to"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp">

        <androidx.appcompat.widget.AppCompatSpinner
                android:layout_weight="3"
                android:background="@drawable/spinner_border"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/id_spinner_from"/>

        <ImageView
                android:scaleType="centerCrop"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_swap"
                android:id="@+id/imageView"/>

        <androidx.appcompat.widget.AppCompatSpinner
                android:layout_weight="3"
                android:background="@drawable/spinner_border"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/id_spinner_to"/>

    </LinearLayout>

    <Button
            android:id="@+id/id_btn_convert"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/str_btn_convert"
            android:textAllCaps="false"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_layout_spinners" />

    <TextView
            android:id="@+id/id_txtvw_test_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_btn_convert" />

</androidx.constraintlayout.widget.ConstraintLayout>