<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity">


    <TextView
            android:text="@string/str_currency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="144dp" app:layout_constraintHorizontal_bias="0.0" style="@style/TitleTextStyle"/>
    <TextView
            android:text="@string/str_calculator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            style="@style/TitleTextStyle"
    />
    <TextView
            android:text="@string/str_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            style="@style/TitleTextStyle"
            android:textColor="@color/project_green"
            app:layout_constraintHorizontal_bias="0.0"
            android:textAlignment="textStart"
            android:layout_margin="0dp"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"/>

    <com.google.android.material.textfield.TextInputEditText
            android:hint="25"
            android:textSize="@dimen/dimen_edittxt_size"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp">

    </com.google.android.material.textfield.TextInputEditText>

    <TextView
            android:text="NGN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textSize="@dimen/dimen_edittxt_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout"/>

    <com.google.android.material.textfield.TextInputEditText
            android:hint="250"
            android:textSize="@dimen/dimen_edittxt_size"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout2"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp">

    </com.google.android.material.textfield.TextInputEditText>

    <TextView
            android:text="USD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textSize="@dimen/dimen_edittxt_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout2"/>

    <Spinner

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            android:layout_marginEnd="8dp"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_swap"
            tools:layout_editor_absoluteX="193dp"
            android:id="@+id/imageView"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toEndOf="@+id/spinner"
            app:layout_constraintEnd_toStartOf="@id/spinner2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"/>

    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginStart="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>